[package]
name = "http-problem"
version = "0.4.0"
authors = ["Luis Holanda <luiscmholanda@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A HTTP APIs focused error handling library"
homepage = "https://github.com/terramagna/http-problem"
repository = "https://github.com/terramagna/http-problem"
keywords = ["http", "api", "error", "7807"]
categories = ["web-programming"]
include = ["src/**/*.rs"]

[features]
diesel = ["dep:diesel", "sql"]
actix = ["dep:actix-web"]
axum = ["dep:axum"]
sql = []
sqlx = ["dep:sqlx-core", "sql"]
tokio-postgres = ["dep:tokio-postgres", "sql"]

[dependencies]
actix-web = { version = "4.4.0", default-features = false, optional = true }
axum = { version = "0.6", optional = true }
backtrace = "0.3.69"
chrono = "0.4.19"
eyre = "0.6.9"
http = "0.2.11"
once_cell = "1.10.0"
parking_lot = "0.12.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx-core = { version = "0.7.3", default-features = false, optional = true }

[dependencies.diesel]
version = "1.4.8"
default-features = false
features = ["r2d2"]
optional = true

[dependencies.tokio-postgres]
version = "0.7.10"
default-features = false
optional = true
